Bug 308544 - Ambiguous - keyboard shortcuts for save
Summary: Ambiguous - keyboard shortcuts for save
Status: RESOLVED FIXED
Alias: None
Product: kalgebra
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-17 10:58 UTC by B.Prathibha
Modified: 2013-06-19 13:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Keyboard shortcut ambiguity resolution (2.29 KB, patch)
2012-10-17 11:00 UTC, B.Prathibha
Details

Note You need to log in before you can comment on or make changes to this bug.
Description B.Prathibha 2012-10-17 10:58:53 UTC
Version: 4.8.4

The same keyboard shortcut(Ctrl+S) is assigned to Console, 2D graph and 3D graph.

Reproducible: Always

Steps to Reproduce:
1.  Click Ctrl+S
2.
3.
Actual Results:  
 throws the error "Ambiguous Keyboard Shortcuts".


Expected Results:  
The "Save As" dialog should appear.

The patch for resolving the issue is attached
Comment 1 B.Prathibha 2012-10-17 11:00:33 UTC
Created attachment 74595 [details]
Keyboard shortcut ambiguity resolution
Comment 2 Aleix Pol 2013-06-19 13:12:42 UTC
Git commit ef592137d46379244b8923f65b4df2c854d4598a by Aleix Pol.
Committed on 19/06/2013 at 01:05.
Pushed by apol into branch 'master'.

Fully disable menus when changing the tab

This way we get to disable the shortcuts as well, so we have better
scoping. If you press Ctrl+S in 2D, you'll get to save the thing you
are viewing.
Additionally Ctrl+- or Ctrl++ won't change the zoom in 2D.

M  +11   -6    src/kalgebra.cpp

http://commits.kde.org/kalgebra/ef592137d46379244b8923f65b4df2c854d4598a