Fully disable menus when changing the tab

This way we get to disable the shortcuts as well, so we have better
scoping. If you press Ctrl+S in 2D, you'll get to save the thing you
are viewing.
Additionally Ctrl+- or Ctrl++ won't change the zoom in 2D.

BUG: 308544